--- a/source/index.pug
+++ b/source/index.pug
@@ -27,7 +27,7 @@ html(lang="zh-TW")
                                         i.fas.fa-volume-up.jsMuteToggle
                                         input.jsVolumeRange(type="range" min="0" max="1" step="0.05" value="1")
                                     .player-time
-                                        span.playe-timer__now.jsTimeNow 00:00
+                                        span.player-time__now.jsTimeNow 00:00
                                         span  / 
                                         span.player-time__all.jsTimeAll 00:00
                                 .player-tools__group
