--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,11 +70,18 @@ main {
   background-image: -o-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.4) 100%);
   background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.4) 100%);
   color: white;
-  padding: 0 20px;
+  padding: 0 1vw;
   opacity: 0;
   -webkit-transition: 0.5s 0.5s;
   -o-transition: 0.5s 0.5s;
   transition: 0.5s 0.5s;
+}
+
+@media (max-width: 667px) {
+  .player-controls {
+    font-size: 12px;
+    height: 40px;
+  }
 }
 
 .player-progress {
@@ -105,6 +112,12 @@ main {
   -ms-flex-align: center;
   align-items: center;
   margin-top: 14px;
+}
+
+@media (max-width: 667px) {
+  .player-tools {
+    margin-top: 10px;
+  }
 }
 
 .player-tools__group {
@@ -142,6 +155,12 @@ main {
   margin: 0 8px;
 }
 
+@media (max-width: 667px) {
+  .player__slider input[type="range"] {
+    width: 40%;
+  }
+}
+
 .player__slider input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 3px;
@@ -162,6 +181,14 @@ main {
   appearance: none;
   background-color: #fff;
   margin-top: -5px;
+}
+
+@media (max-width: 667px) {
+  .player__slider input[type="range"]::-webkit-slider-thumb {
+    width: 9px;
+    height: 9px;
+    margin-top: -3px;
+  }
 }
 
 .player__title {
