--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -63,9 +63,12 @@ main
         height: 50px
         background-image: linear-gradient(to bottom, transparent 0%, rgba(black,0.4) 100%)
         color: white
-        padding: 0 20px
+        padding: 0 1vw
         opacity: 0
         transition: 0.5s 0.5s
+        @media (max-width: 667px)
+            font-size: 12px
+            height: 40px
     &-progress
         position: relative
         width: 100%
@@ -84,10 +87,11 @@ main
         justify-content: space-between
         align-items: center
         margin-top: 14px
+        @media (max-width: 667px)
+            margin-top: 10px
         &__group
             display: flex
             align-items: center
-            
     &__button, &__slider
         margin: 0 10px
         cursor: pointer
@@ -101,6 +105,8 @@ main
             background-color: transparent
             transition: 0.5s
             margin: 0 8px
+            @media (max-width: 667px)
+                width: 40%
             &::-webkit-slider-runnable-track
                 width: 100%
                 height: 3px
@@ -115,7 +121,11 @@ main
                 border-radius: 50%
                 appearance: none
                 background-color: #fff
-                margin-top: -5px          
+                margin-top: -5px
+                @media (max-width: 667px)
+                    width: 9px
+                    height: 9px       
+                    margin-top: -3px
     &__title
         margin: 1rem 0
         font-size: 1.25rem
