--- a/source/index.pug
+++ b/source/index.pug
@@ -33,8 +33,8 @@ html(lang="zh-TW")
                                 .player-tools__group
                                     button.player__button.player--screen.jsFullScreen
                                         i.fas.fa-expand
-
-                    h1.player__title.player__title--white 國立虎尾科技學生會 虎嘯聲新生特刊（NFUSA Freshmen 2015）
+                    .content.player-content
+                        h1.player__title.player__title--white 國立虎尾科技學生會 虎嘯聲新生特刊（NFUSA Freshmen 2015）
         footer
 
     script(src="js/index.js")
