--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -1,6 +1,6 @@
 %init
-    margin: 0
-    padding: 0
+    margin: 0px
+    padding: 0px
     position: relative
     font-size: 100%
 
@@ -34,7 +34,7 @@ main
     padding: 2vw
     min-height: 100vh
     @media (max-width: 677px)
-        padding: 0
+        padding: 2vw 0
 
 #player
     display: block
