--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -50,7 +50,7 @@ main
     margin: 2vw 0
     overflow: hidden
     @media (max-width: 677px)
-        padding: 0
+        margin: 0px
     &:hover
         .player-controls
             bottom: 0px
