--- a/source/index.pug
+++ b/source/index.pug
@@ -24,7 +24,7 @@ html(lang="zh-TW")
                                     button.player__button.player--play.jsPlayToggle
                                         i.fas.fa-play
                                     label.player__slider.player__slider--volume
-                                        i.fas.fa-volume-up.jsMuteToggle
+                                        i.player__volume.fas.fa-volume-up.jsMuteToggle
                                         input.jsVolumeRange(type="range" min="0" max="1" step="0.05" value="1")
                                     .player-time
                                         span.player-time__now.jsTimeNow 00:00
