--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -1,18 +1,26 @@
 %init
+    position: relative
     margin: 0px
     padding: 0px
-    position: relative
+    border: 0
     font-size: 100%
+    font: inherit
 
 *, *:before, *:after
     box-sizing: border-box
 
 html, body
     @extend %init
+
+html
     font-family: 微軟正黑體
 
 h1, h2, h3, h4, h5, h6, p
     @extend %init
+
+section, footer, main
+    @extend %init
+    display: block
 
 input, button
     @extend %init
@@ -22,9 +30,9 @@ button
     border: none
     background: none
     color: inherit
+
     
 main
-    @extend %init
     background-color: #1f1f1f
     padding: 2vw
     min-height: 100vh
@@ -99,7 +107,12 @@ main
     &__button, &__slider
         margin: 0 10px
         cursor: pointer
-    &__button
+    &__volume
+        width: 18px
+        height: 18px
+        display: flex
+        justify-content: center
+        align-items: center
     &__slider
         display: inline-flex
         align-items: center
@@ -111,14 +124,31 @@ main
             margin: 0 8px
             @media (max-width: 667px)
                 width: 40%
+            // google 軌道顏色
             &::-webkit-slider-runnable-track
                 width: 100%
                 height: 3px
                 cursor: pointer
                 background-color: rgba(white,0.8)
                 border-radius: 5px
+            // mozilla 軌道顏色
+            &::-moz-range-track
+                width: 100%
+                height: 3px
+                cursor: pointer
+                background-color: rgba(white,0.8)
+                border-radius: 5px
+            // 微軟軌道顏色
+            &::-ms-track
+                width: 100%
+                height: 3px
+                cursor: pointer
+                background-color: rgba(white,0.8)
+                border-color: transparent
+                color: transparent
             &:focus::-webkit-slider-runnable-track
                 background-color: #fff
+            // google 滑塊
             &::-webkit-slider-thumb
                 width: 12px
                 height: 12px
@@ -130,6 +160,20 @@ main
                     width: 9px
                     height: 9px       
                     margin-top: -3px
+            // mozilla 滑塊
+            &::-moz-range-thumb
+                width: 12px
+                height: 12px
+                border-radius: 50%
+                appearance: none
+                background-color: #fff
+            // 微軟 滑塊
+            &::-ms-thumb
+                margin-top: -2px
+                width: 12px
+                height: 12px
+                border-radius: 50%
+                background-color: #fff
     &__title
         margin: 1rem 0
         font-size: 1.25rem
