--- a/source/index.pug
+++ b/source/index.pug
@@ -31,7 +31,8 @@ html(lang="zh-TW")
                                         span  / 
                                         span.player-time__all.jsTimeAll 00:00
                                 .player-tools__group
-                                    button.player__button.player--screen.jsFullScreen
+                                    button.player__button.player__speed.jsSpeed ×1
+                                    button.player__button.player__screen.jsFullScreen
                                         i.fas.fa-expand
                     .content.player-content
                         h1.player__title.player__title--white 國立虎尾科技學生會 虎嘯聲新生特刊（NFUSA Freshmen 2015）
