--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -107,6 +107,11 @@ main
     &__button, &__slider
         margin: 0 10px
         cursor: pointer
+    &__slider
+        &--volume
+            flex-basis: 85px
+            flex-grow: 1
+            flex-shrink: 1
     &__volume
         width: 18px
         height: 18px
@@ -117,13 +122,11 @@ main
         display: inline-flex
         align-items: center
         input[type="range"]
-            width: 120px
+            width: 100%
             appearance: none
             background-color: transparent
             transition: 0.5s
             margin: 0 8px
-            @media (max-width: 667px)
-                width: 40%
             // google 軌道顏色
             &::-webkit-slider-runnable-track
                 width: 100%
@@ -174,12 +177,20 @@ main
                 height: 12px
                 border-radius: 50%
                 background-color: #fff
+    &__speed
+        width: 48px
+        height: 24px
+        font-size: 12px
+        display: flex
+        justify-content: center
+        align-items: center
+        border-radius: 5px
+        background-color: rgba(black,0.5)
     &__title
         margin: 1rem 0
         font-size: 1.25rem
         &#{&}--white
             color: white
-            
 .iOS
     .player
         &-controls
