--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -186,6 +186,9 @@ main
         align-items: center
         border-radius: 5px
         background-color: rgba(black,0.5)
+        transition: 0.5s
+        &:hover
+            background-color: darken(orange,10%)
     &__title
         margin: 1rem 0
         font-size: 1.25rem
